# stock-picker

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  Makefile  NEXT_SESSION.md  README.md  docker-compose.yml  env.example
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  notifications.py  providers.py  schemas.py  scoring.py  security.py  seed.py  services.py  tasks.py
backend/tests/: conftest.py  test_config.py  test_notifications.py  test_provider_refresh.py  test_scoring.py  test_security.py  test_services.py  test_tasks.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: api.ts  main.tsx  styles.css  types.ts
